bgd-1/base/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bgd-1
  name: bgd-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd-1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd-1
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: bgd
        resources: {}
---
