bgd-1/base/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd-1
  name: bgd-1
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd-1
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
